# remote-clauding

./: .env.example  .gitignore  README.md  deploy-remote.sh  deploy.sh  package-lock.json  package.json
.claude/: settings.local.json
agent/: package-lock.json  package.json  start-background.vbs
agent/src/: claude.js  http-server.js  index.js  relay-client.js  session-manager.js
cli/: interactive-select.js  markdown-render.js  package-lock.json  package.json  relay-bridge.js  remote-clauding.js  terminal-footer.js  terminal-renderer.js
docs/: PLAN.md
lib/: agent.js  auth.js  config.js  relay-client.js  setup.js  status.js  tray.js
server/: package-lock.json  package.json
server/src/: auth.js  db.js  email.js  index.js  push.js  relay.js  sessions.js
tauri-app/: build.bat  index.html  package-lock.json  package.json
tauri-app/scripts/: bundle-npm-package.js
tauri-app/src/: App.jsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/nsis/: hooks.nsh
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/pages/: Complete.jsx  Dashboard.jsx  Install.jsx  Login.jsx  Register.jsx  SelectEnvironment.jsx  Welcome.jsx
tauri-app/src/styles/: app.css
vscode-ext/: package-lock.json  package.json
vscode-ext/src/: extension.js
web/: index.html  package-lock.json  package.json
web/public/: manifest.json  sw.js
web/scripts/: generate-icons.js
web/src/: App.jsx  main.jsx
web/src/components/: AskQuestion.jsx  InputBar.jsx  Message.jsx  MessageList.jsx  PermissionCard.jsx  QRScanner.jsx  (+4 more)
(+3 files in other folders)
