[package]
name = "remote-clauding-desktop"
version = "1.0.0"
description = "Remote Clauding Desktop Installer & Manager"
authors = ["Remote Clauding"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "6"
zip = "2"
flate2 = "1"
tar = "0.4"
